[gd_scene load_steps=9 format=2]

[ext_resource path="res://items/item.tscn" type="PackedScene" id=1]
[ext_resource path="res://items/overlay_watch/overlay_watch_button/overlay_watch_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://items/overlay_watch/watchHand.png" type="Texture" id=3]
[ext_resource path="res://items/overlay_watch/watchBaseSmall.png" type="Texture" id=4]
[ext_resource path="res://items/overlay_watch/watchBase.png" type="Texture" id=5]
[ext_resource path="res://items/overlay_watch/watchHandSmall.png" type="Texture" id=6]
[ext_resource path="res://items/overlay_watch/overlay_watch.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 288 )

[node name="OverlayWatch" instance=ExtResource( 1 )]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
position = Vector2( 512, 288 )
shape = SubResource( 1 )

[node name="OverlayWatchButton" parent="." index="2" instance=ExtResource( 2 )]
position = Vector2( 768, 288 )

[node name="WatchBase" type="Sprite" parent="." index="3"]
position = Vector2( 512, 288 )
texture = ExtResource( 5 )

[node name="WatchBaseSmall" type="Sprite" parent="." index="4"]
position = Vector2( 619, 295 )
scale = Vector2( 0.92345, 0.92345 )
texture = ExtResource( 4 )
offset = Vector2( -1.08289, -2.16577 )

[node name="WatchHand" type="Sprite" parent="." index="5"]
position = Vector2( 512, 288 )
scale = Vector2( 0.988831, 0.988831 )
texture = ExtResource( 3 )
offset = Vector2( -3.05176e-05, -56.6325 )

[node name="WatchHandSmall" type="Sprite" parent="." index="6"]
position = Vector2( 618, 295 )
scale = Vector2( 0.948529, 0.948529 )
texture = ExtResource( 6 )
offset = Vector2( 0, -22.1395 )

[node name="Timer" type="Timer" parent="." index="7"]

[node name="TimerSweetSpot" type="Timer" parent="." index="8"]
wait_time = 0.3
one_shot = true
autostart = true

[connection signal="pressed" from="OverlayWatchButton" to="." method="_on_OverlayWatchButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
